@@ -1,0 +1,1 @@
+SampleID,Tissue,Factor,Condition,Replicate,bamReads,bamControl,Peaks,BT474.1-,BT474,ER,Resistant,1,GEO_DATA/GSM798430_SLX-2645.443.s_5.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798443_SLX-2577.443.s_8.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798430_SLX-2645.443.s_5_SLX-2577.443.s_8_peaks.txt.gz,BT474.2-,BT474,ER,Resistant,2,GEO_DATA/GSM798431_SLX-2576.443.s_7.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798443_SLX-2577.443.s_8.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798431_SLX-2576.443.s_7_SLX-2577.443.s_8_peaks.txt.gz,MCF7.1+,MCF7,ER,Responsive,1,GEO_DATA/GSM798423_SLX-2640.438.s_1.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798440_SLX-2574.433.s_2.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798423_SLX-2640.438.s_1_SLX-2574.433.s_2_peaks.txt.gz,MCF7.2+,MCF7,ER,Responsive,2,GEO_DATA/GSM798424_SLX-2773.448.s_1.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798440_SLX-2574.433.s_2.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798424_SLX-2773.448.s_1_SLX-2574.433.s_2_peaks.txt.gz,MCF7.3+,MCF7,ER,Responsive,3,GEO_DATA/GSM798425_SLX-2943.469.s_2.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798440_SLX-2574.433.s_2.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798425_SLX-2943.469.s_2_SLX-2574.433.s_2_peaks.txt.gz,T47D.1+,T47D,ER,Responsive,1,GEO_DATA/GSM798428_SLX-2775.448.s_3.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798442_T47D_Input_f.bam,GEO_DATA/GSM798428_SLX-2775.448.s_3_T47D_Input_peaks.txt.gz,T47D.2+,T47D,ER,Responsive,2,GEO_DATA/GSM798429_SLX-2867.466.s_6.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798442_T47D_Input_f.bam,GEO_DATA/GSM798429_SLX-2867.466.s_6_T47D_Input_peaks.txt.gz,MCF7.1-,MCF7,ER,Resistant,1,GEO_DATA/GSM798432_SLX-3229.521.s_5.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798444_SLX-3231.526.s_5.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798432_SLX-3229.521.s_5_SLX-1651.307.s_1_peaks.txt.gz,MCF7.2-,MCF7,ER,Resistant,2,GEO_DATA/GSM798433_SLX-3230.526.s_4.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798444_SLX-3231.526.s_5.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798433_SLX-3230.526.s_4_SLX-3231.526.s_5_peaks.txt.gz,ZR75.1+,ZR75,ER,Responsive,1,GEO_DATA/GSM798426_SLX-2774.448.s_2.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798441_ZR75_Input_f.bam,GEO_DATA/GSM798426_SLX-2774.448.s_2_ZR75_Input_peaks.txt.gz,ZR75.2+,ZR75,ER,Responsive,2,GEO_DATA/GSM798427_SLX-2866.466.s_7.bwa.homo_sapiens_f.bam,GEO_DATA/GSM798441_ZR75_Input_f.bam,GEO_DATA/GSM798427_SLX-2866.466.s_7_ZR75_Input_peaks.txt.gz,
